[project]
name = "commandnet"
version = "0.4.0"
description = "A lightweight, Pydantic-powered, distributed event-driven state machine and typed node graph runtime."
authors = [
    { name = "Christopher Vaz", email = "christophervaz160@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0.0"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
Homepage = "https://github.com/NullAxon/commandnet"
Repository = "https://github.com/NullAxon/commandnet"
Issues = "https://github.com/NullAxon/commandnet/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_test_loop_scope = "function"
asyncio_default_fixture_loop_scope = "function"

